feature: changes styles menu sublist on desktope

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -962,98 +962,100 @@
             <img src="img/pic/ico/iphone-ico.svg" width="50" height="46" alt="">
             <span>iPhone</span>
           </a>
-          <ul class="header__sublist">
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-1.jpg" alt="">
-                </div>
-                <span>iPhone 11 Pro Max</span>
-              </a>
-            </li>
+          <div class="header__sublist-wrap">
+            <ul class="header__sublist">
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
 
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-1.jpg" alt="">
-                </div>
-                <span>iPhone 11 Pro</span>
-              </a>
-            </li>
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro</span>
+                </a>
+              </li>
 
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-1.jpg" alt="">
-                </div>
-                <span>iPhone 11 Pro Max</span>
-              </a>
-            </li>
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
 
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-2.jpg" alt="">
-                </div>
-                <span>iPhone 11</span>
-              </a>
-            </li>
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-2.jpg" alt="">
+                  </div>
+                  <span>iPhone 11</span>
+                </a>
+              </li>
 
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-3.jpg" alt="">
-                </div>
-                <span>iPhone XS Max</span>
-              </a>
-            </li>
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-3.jpg" alt="">
+                  </div>
+                  <span>iPhone XS Max</span>
+                </a>
+              </li>
 
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-3.jpg" alt="">
-                </div>
-                <span>iPhone XS</span>
-              </a>
-            </li>
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-3.jpg" alt="">
+                  </div>
+                  <span>iPhone XS</span>
+                </a>
+              </li>
 
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-4.jpg" alt="">
-                </div>
-                <span>iPhone XR</span>
-              </a>
-            </li>
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-4.jpg" alt="">
+                  </div>
+                  <span>iPhone XR</span>
+                </a>
+              </li>
 
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-5.jpg" alt="">
-                </div>
-                <span>iPhone X</span>
-              </a>
-            </li>
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-5.jpg" alt="">
+                  </div>
+                  <span>iPhone X</span>
+                </a>
+              </li>
 
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-6.jpg" alt="">
-                </div>
-                <span>iPhone 8 Plus</span>
-              </a>
-            </li>
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-6.jpg" alt="">
+                  </div>
+                  <span>iPhone 8 Plus</span>
+                </a>
+              </li>
 
-            <li>
-              <a class="uk-flex uk-flex-middle" href="#">
-                <div>
-                  <img src="img/temp/header-sublist-6.jpg" alt="">
-                </div>
-                <span>iPhone 8</span>
-              </a>
-            </li>
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-6.jpg" alt="">
+                  </div>
+                  <span>iPhone 8</span>
+                </a>
+              </li>
 
-          </ul>
+            </ul>
+          </div>
         </li>
 
         <li class="swiper-slide">
@@ -1061,17 +1063,46 @@
             <img src="img/pic/ico/ipad-ico.svg" width="46" height="48" alt="">
             <span>iPad</span>
           </a>
-          <ul class="header__sublist">
-            <li>
-              <a href="#">iPhone 11 Pro Max</a>
-            </li>
-            <li>
-              <a href="#">iPhone 11 Pro</a>
-            </li>
-            <li>
-              <a href="#">iPhone 11</a>
-            </li>
-          </ul>
+
+          <div class="header__sublist-wrap">
+            <ul class="header__sublist">
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-2.jpg" alt="">
+                  </div>
+                  <span>iPhone 11</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
 
         <li class="swiper-slide">
@@ -1079,17 +1110,46 @@
             <img src="img/pic/ico/macbook-ico.svg" width="70" height="40" alt="">
             <span>MacBook и iMac</span>
           </a>
-          <ul class="header__sublist">
-            <li>
-              <a href="#">iPhone 11 Pro Max</a>
-            </li>
-            <li>
-              <a href="#">iPhone 11 Pro</a>
-            </li>
-            <li>
-              <a href="#">iPhone 11</a>
-            </li>
-          </ul>
+
+          <div class="header__sublist-wrap">
+            <ul class="header__sublist">
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-2.jpg" alt="">
+                  </div>
+                  <span>iPhone 11</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
 
         <li class="swiper-slide">
@@ -1097,17 +1157,46 @@
             <img src="img/pic/ico/iwatch-ico.svg" width="23" height="42" alt="">
             <span>Watch</span>
           </a>
-          <ul class="header__sublist">
-            <li>
-              <a href="#">iPhone 11 Pro Max</a>
-            </li>
-            <li>
-              <a href="#">iPhone 11 Pro</a>
-            </li>
-            <li>
-              <a href="#">iPhone 11</a>
-            </li>
-          </ul>
+
+          <div class="header__sublist-wrap">
+            <ul class="header__sublist">
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-2.jpg" alt="">
+                  </div>
+                  <span>iPhone 11</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
 
         <li class="swiper-slide">
@@ -1115,17 +1204,46 @@
             <img src="img/pic/ico/accessories-ico.svg" width="31" height="46" alt="">
             <span>Аксессуары</span>
           </a>
-          <ul class="header__sublist">
-            <li>
-              <a href="#">iPhone 11 Pro Max</a>
-            </li>
-            <li>
-              <a href="#">iPhone 11 Pro</a>
-            </li>
-            <li>
-              <a href="#">iPhone 11</a>
-            </li>
-          </ul>
+
+          <div class="header__sublist-wrap">
+            <ul class="header__sublist">
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-1.jpg" alt="">
+                  </div>
+                  <span>iPhone 11 Pro Max</span>
+                </a>
+              </li>
+
+              <li>
+                <a class="uk-flex uk-flex-middle" href="#">
+                  <div>
+                    <img src="img/temp/header-sublist-2.jpg" alt="">
+                  </div>
+                  <span>iPhone 11</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
       </ul>
     </nav>
