--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -437,33 +437,11 @@
           }
         }
 
-        &::before {
-          @include screen(l) {
-            content: "";
-            position: absolute;
-            bottom: -10px;
-            left: 0;
-            right: 0;
-            margin: auto;
-            width: 70%;
-            height: 6px;
-            border-radius: 100px 100px 0px 0px;
-            background: transparent;
-            transition: width .2s, background-color .2s;
-            will-change: width, background-color;
-          }
-        }
-
         &:hover {
           .header__sublist {
             opacity: 1;
             pointer-events: inherit;
             z-index: 1000;
-          }
-
-          &::before {
-            background: #FF548C;
-            width: 100%;
           }
 
           &>a {
@@ -508,12 +486,13 @@
 
     @include screen(l) {
       position: absolute;
+      top: 15px;
       min-width: 0;
       width: 320px;
       max-height: 400px;
       overflow-y: scroll;
+      overflow-x: hidden;
       padding: 10px 25px 10px 10px;
-      top: 58px !important;
       border-radius: 15px;
       border: 1px solid #EAEAEA;
       opacity: 0;
@@ -522,14 +501,25 @@
       transition: opacity .2s;
     }
 
-    &::after {
-      @include screen(l) {
-        content: "";
-        position: absolute;
-        top: -20px;
-        height: 20px;
-        width: 100%;
-        background: transparent;
+    &-wrap {
+      position: relative;
+
+      &::after {
+        @include screen(l) {
+          content: "";
+          position: absolute;
+          z-index: 20;
+          top: -20px;
+          height: 40px;
+          width: 100%;
+          background: transparent;
+        }
+      }
+    }
+
+    li {
+      &:not(:last-of-type) {
+        margin-bottom: 10px;
       }
     }
 
@@ -541,32 +531,40 @@
       }
 
       &:hover {
-        background: #FFFFFF;
-        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
-        border-radius: 12px;
-        color: #FF548C;
+        @include screen(l) {
+          background: #FFFFFF;
+          box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+          border-radius: 12px;
+          color: #FF548C;
 
-        img {
-          transform: scale(1.2);
+          img {
+            @include screen(l) {
+              transform: scale(1.3);
+            }
+          }
         }
       }
 
       &>div {
         @include screen(l) {
+          position: relative;
           margin-right: 10px;
           width: 50px;
           height: 50px;
-          mix-blend-mode: darken;
         }
       }
 
       img {
         @include screen(l) {
-          margin: 0;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          margin: auto;
           width: 100%;
           height: auto;
-          mix-blend-mode: darken;
-          transition: transform .15s;
+          mix-blend-mode: multiply;
         }
       }
     }
@@ -574,17 +572,22 @@
 
   &__banner {
     position: relative;
-    padding: 15px 30px 15px 105px;
+    padding: 15px 20px 15px 95px;
     width: 260px;
     text-align: right;
     background-color: #F4F4F4;
     border-radius: 8px;
     overflow: hidden;
     cursor: pointer;
+    transition: box-shadow .3s;
+
+    &:hover {
+      box-shadow: 0 3px 15px rgba(0, 0, 0, .2);
+    }
 
     img {
       position: absolute;
-      left: 20px;
+      left: 15px;
       bottom: 0;
       mix-blend-mode: darken;
     }
