--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -1,8 +1,9 @@
 .review {
   position: relative;
-  border: 1px solid #EAEAEA;
+  border: 1px solid transparent;
   border-radius: 15px;
   background-color: #F8F8F8;
+  transition: border-color .3s;
 
   @include screen(xl) {
     padding: 20px;
@@ -10,6 +11,10 @@
 
   @include screen(l) {
     padding: 20px 20px 20px 100px;
+  }
+
+  &:hover {
+    border: 1px solid #EAEAEA;
   }
 
   img {
@@ -22,7 +27,7 @@
   }
 
   &__name {
-    font: 500 22px/26px FuturaPT;
+    font: 400 22px/26px FuturaPT;
     color: #30373D;
 
     @include screen(xl) {
@@ -36,8 +41,8 @@
   }
 
   &__text {
-    font: normal 16px/24px Roboto;
-    color: #30373D;
+    font: normal 14px/26px Roboto;
+    color: rgba(48, 55, 61, .9);
 
     @include screen(xl) {
       order: 1;
