--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -161,7 +161,7 @@
 
           &:last-child {
             padding-right: 10px;
-            font: normal 16px/19px Roboto;
+            font: 300 16px/19px Roboto;
             color: #FF548C;
           }
         }
