--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -7,9 +7,11 @@
 
 body {
   position: relative;
-  font: normal 16px/26px Roboto, sans-serif;
+  font: normal 14px/26px Roboto, sans-serif;
   font-weight: normal;
   background-color: #ffffff;
+  color: rgba(48, 55, 61, .9);
+
 }
 
 a {
@@ -248,13 +250,17 @@ button {
   }
 
   .search input {
-    border: 1px solid #FF548C;
+    /* border: 1px solid #FF548C; */
     box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
     background: url("../img/pic/ico/search-ico-pink.svg") no-repeat, #FFFFFF;
     background-size: 18px 18px;
     background-position: 755px;
     position: relative;
     z-index: 100;
+
+    &::placeholder {
+      opacity: 0;
+    }
   }
 
   .search__close {
