--- a/src/sass/components/_calc.scss
+++ b/src/sass/components/_calc.scss
@@ -26,7 +26,7 @@
 
       input[type=range] {
         -webkit-appearance: none;
-        margin: 20px 0 17px;
+        margin: 20px 0;
         width: 100%;
         background: none;
 
@@ -99,9 +99,10 @@
 
     &-input-val {
       position: absolute;
-      top: 0;
-      left: -1px;
+      top: 5;
+      left: -1.76471px;
       width: 30px;
+      margin-left: 1.76471px;
       text-align: center;
       pointer-events: none;
       color: #ffffff;
@@ -109,8 +110,8 @@
       &::after {
         content: '...';
         position: absolute;
-        top: 20px;
-        left: 7px;
+        top: 12px;
+        left: 6px;
         font-size: 25px;
         color: rgba(0, 0, 0, .45);
       }
