--- a/src/sass/layout/_articles.scss
+++ b/src/sass/layout/_articles.scss
@@ -34,6 +34,12 @@
     li {
       padding-bottom: 20px;
 
+      &:hover {
+        img {
+          transform: scale(1.05);
+        }
+      }
+
       &:not(:first-of-type) {
         padding-top: 20px;
       }
@@ -45,6 +51,7 @@
 
     img {
       border-radius: 8px;
+      transition: transform .3s;
 
       @include screen(xl) {
         width: 100%;
@@ -64,8 +71,8 @@
     }
 
     p {
-      font: normal 16px/24px Roboto;
-      color: #30373D;
+      font: normal 15px/24px Roboto;
+      color: rgba(48, 55, 61, 1);
     }
 
     a {
