--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -26,8 +26,8 @@
     }
 
     p {
-      font: normal 14px/24px Roboto;
-      color: #555555;
+      font: normal 14px/26px Roboto;
+      color: rgba(48, 55, 61, .9);
 
       @include screen(xl) {
         margin-bottom: 20px;
@@ -73,7 +73,7 @@
 
     a {
       border-bottom: 1px solid transparent;
-      font: 500 16px/24px FuturaPT;
+      font: 400 16px/24px FuturaPT;
       color: #333333;
       transition: border .3s, color .3s;
 
@@ -108,6 +108,7 @@
       }
 
       a {
+        margin-bottom: 20px;
         font: 600 32px/37px FuturaPT;
         color: #333333;
       }
@@ -121,8 +122,8 @@
 
   &__address {
     margin-bottom: 10px;
-    font: normal 14px/32px Roboto;
-    color: #30373D;
+    font: normal 14px/26px Roboto;
+      color: rgba(48, 55, 61, .9);
 
     @include screen(xl) {
       padding: 0 15px;
