--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,17 +4,23 @@
   &__top {
     font: 500 16px/24px FuturaPT;
     background-color: rgb(248, 248, 248);
-    border-bottom: 1px solid #E9E9E9;
+    border-bottom: 1px solid rgba(233, 233, 233, 0.7);
+
+    @include screen(l) {
+      padding-top: 7.5px;
+      padding-bottom: 7.5px;
+    }
 
     &-select-city {
       span {
-        color: rgba(51, 51, 51, 0.5);
+        font: 400 13px/14px Roboto;
+        color: rgba(51, 51, 51, 0.45);
       }
 
       a {
         position: relative;
         padding-right: 15px;
-        font: normal 14px/14px Roboto;
+        font: 400 13px/14px Roboto;
 
         &::after {
           position: absolute;
@@ -25,14 +31,14 @@
           height: 8px;
           border-top: 2px solid;
           border-left: 2px solid;
-          border-radius: 3px 0 0 0;
+          border-radius: 1px 0 0 0;
           transform: rotate(225deg) translate(0, 50%);
         }
       }
     }
 
     a {
-      color: #FF548C;
+      color: rgba(255, 84, 141, 0.9);
 
       &:hover {
         opacity: .7;
@@ -70,17 +76,17 @@
           }
 
           a {
-            width: 18px;
-            height: 18px;
-            background: url("../img/pic/logo/insta-logo.svg") center no-repeat;
+            width: 25px;
+            height: 14px;
+            background: url("../img/pic/logo/vk-logo.svg") center no-repeat;
           }
         }
 
         &:nth-of-type(2) {
           a {
-            width: 25px;
-            height: 14px;
-            background: url("../img/pic/logo/vk-logo.svg") center no-repeat;
+            width: 18px;
+            height: 18px;
+            background: url("../img/pic/logo/insta-logo.svg") center no-repeat;
           }
 
         }
@@ -90,6 +96,7 @@
           display: block;
           padding: 0 20px;
           min-width: 60px;
+          font: 500 13px/14px Roboto;
         }
 
         svg {
@@ -106,6 +113,8 @@
   }
 
   &__logo {
+    display: flex;
+
     @include screen(xl) {
       padding-top: 5px;
       margin-right: 30px;
@@ -126,7 +135,7 @@
 
     a {
       border-bottom: 1px solid transparent;
-      font: 500 16px/22px FuturaPT;
+      font: normal 16px/22px FuturaPT;
       color: #30373d;
       transition: border .3s;
 
@@ -141,11 +150,11 @@
     white-space: nowrap;
 
     span {
+      color: rgba(51, 51, 51, .4);
+
       @include screen(xl) {
         display: none;
       }
-
-      color: rgba(51, 51, 51, .5);
 
       &:first-child {
         position: relative;
@@ -154,6 +163,8 @@
         @include screen(l) {
           padding-right: 20px;
           margin-right: 20px;
+          text-align: right;
+          color: rgba(51, 51, 51, .4);
         }
 
         &:after {
@@ -170,7 +181,8 @@
       }
 
       &:last-child {
-        font: normal 11px/13px Roboto;
+        text-align: right;
+        font: normal 10px/13px Roboto;
       }
     }
 
@@ -182,13 +194,13 @@
 
     a {
       position: relative;
-      /* padding-left: 19px; */
       margin-bottom: 5px;
-      font: 600 20px/26px FuturaPT;
-      color: #333333;
+      font: 500 20px/23px FuturaPT;
+      color: rgba(51, 51, 51, 1);
 
       svg {
         transition: transform .3s;
+        transform: translate(-5px);
       }
 
       &:hover svg {
@@ -223,14 +235,17 @@
     }
 
     &-btn {
+      display: flex;
+      align-items: center;
       position: relative;
       z-index: 51;
-      padding: 13px 15px 9px;
+      padding: 13px 25px 9px;
       max-width: 230px;
+      min-width: 230px;
       box-shadow: 0px 4px 12px rgba(255, 84, 140, 0.4);
       border-radius: 8px;
       background-color: #FF548C;
-      font: 600 15px/19px FuturaPT;
+      font: 500 15px/19px FuturaPT;
       color: #ffffff;
       text-transform: uppercase;
       transition: box-shadow .3s, background-color.3s;
@@ -247,7 +262,7 @@
       }
 
       svg {
-        margin: 0 15px 2px 0;
+        margin: 0 10px 2px 0;
       }
 
       &.uk-open+div+.header__catalog-bg {
@@ -277,8 +292,8 @@
 
     &-close {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 10px;
+      right: 10px;
       padding: 12px 15px 11px;
       width: 100%;
       max-width: 110px;
@@ -287,6 +302,29 @@
       text-transform: uppercase;
       background: #DDDDDD;
       border-radius: 8px;
+      transition: box-shadow .3s;
+
+      &:hover {
+        box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+      }
+    }
+
+    &-question {
+      position: absolute;
+      top: 10px;
+      right: 130px;
+      padding: 10px 15px 9px;
+      max-width: 210px;
+      border-radius: 8px;
+      font: 500 16px/22px FuturaPT;
+      cursor: pointer;
+      background: #6344b6;
+      box-shadow: 0 4px 12px rgba(107, 72, 169, .4);
+
+      &:hover {
+        background: rgb(103, 60, 221);
+        box-shadow: 0px 4px 15px rgba(107, 72, 169, 0.7);
+      }
     }
 
     &-tabs {
@@ -297,7 +335,7 @@
       li {
         &:not(:last-of-type) {
           @include screen(l) {
-            margin-right: 30px;
+            margin-right: 10px;
           }
         }
       }
@@ -314,10 +352,10 @@
 
       &.uk-subnav-pill>*> :first-child {
         position: relative;
-        padding: 5px 10px 15px;
+        padding: 5px 25px 10px;
         background: transparent;
         color: #333333;
-        font: 600 20px/28px FuturaPT;
+        font: 500 20px/28px FuturaPT;
         text-transform: inherit;
 
         &::after {
@@ -327,7 +365,7 @@
           left: 0;
           right: 0;
           margin: auto;
-          height: 6px;
+          height: 4px;
           width: 40%;
           background: transparent;
           border-radius: 100px 100px 0px 0px;
@@ -343,7 +381,7 @@
 
     &-list {
       a {
-        padding: 10px;
+        padding: 19px;
         text-align: center;
         border-radius: 20px;
         transition: box-shadow .15s;
@@ -366,12 +404,12 @@
 
       div {
         margin-bottom: 10px;
-        width: 140px;
-        height: 140px;
+        width: 120px;
+        height: 120px;
       }
 
       span {
-        font: 500 18px/28px FuturaPT;
+        font: 400 18px/28px FuturaPT;
         color: #30373D;
         transition: color .15s;
       }
@@ -463,7 +501,7 @@
           }
 
           @include screen(l) {
-            padding: 0 35px;
+            padding: 0 28px;
             white-space: nowrap;
             font: 500 18px/23px FuturaPT;
             transition: color .15s;
@@ -472,7 +510,7 @@
 
         img {
           @include screen(l) {
-            margin-right: 10px;
+            margin-right: 15px;
           }
         }
       }
@@ -525,7 +563,7 @@
 
     a {
       @include screen(l) {
-        padding: 10px 15px !important;
+        padding: 10px 30px !important;
         font: 500 16px/23px FuturaPT;
         color: #30373D;
       }
@@ -572,8 +610,8 @@
 
   &__banner {
     position: relative;
-    padding: 15px 20px 15px 95px;
-    width: 260px;
+    padding: 15px 25px 15px 105px;
+    width: 305px;
     text-align: right;
     background-color: #F4F4F4;
     border-radius: 8px;
@@ -598,14 +636,15 @@
       &:first-of-type {
         margin-bottom: 5px;
         white-space: nowrap;
-        font: 500 11px/13px Roboto;
+        font: 400 11px/13px Roboto;
         text-transform: uppercase;
         color: #FF548C;
+        text-align: center;
       }
 
       &:last-of-type {
         white-space: nowrap;
-        font: 700 17px/23px Roboto;
+        font: 700 20px/23px Roboto;
         color: #30373D;
       }
     }
