--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -26,7 +26,7 @@
 
     p {
       margin-top: 15px;
-      font: normal 18px/28px Roboto;
+      font: 300 18px/28px Roboto;
     }
   }
 
@@ -60,7 +60,7 @@
     label {
       position: relative;
       cursor: pointer;
-      font: normal 14px/16px Roboto;
+      font: normal 12px/16px Roboto;
       color: #30373D;
     }
 
@@ -167,12 +167,17 @@
 
   .btn {
     padding: 15px;
-    font: 600 16px/19px FuturaPT;
+    font: 500 16px/19px FuturaPT;
     text-transform: uppercase;
 
     &--gray {
       background: #F8F8F8;
       color: #FF548C;
+
+      &:hover {
+        background: #ffffff;
+        box-shadow: 5px 5px 15px rgba(0, 0, 0, .2);
+      }
     }
 
     &--green {
@@ -273,7 +278,7 @@
       margin-bottom: 10px;
       font: 700 12px/20px FuturaPT;
       text-transform: uppercase;
-      opacity: .8;
+      opacity: .6;
     }
 
     a {
@@ -284,7 +289,7 @@
     }
 
     &-text {
-      font: normal 14px/20px Roboto;
+      font: normal 12px/20px Roboto;
       opacity: .5;
     }
   }
@@ -449,6 +454,10 @@
         @include screen(xl) {
           padding: 10px;
           width: auto;
+        }
+
+        @include screen(l) {
+          height: auto !important;
         }
       }
 
@@ -763,6 +772,14 @@
   }
 
   &--error-pay {
+    .popup__header {
+      p {
+        &:last-of-type {
+          margin-top: 5px;
+        }
+      }
+    }
+
     .popup__content {
       a {
         margin-top: 20px;
@@ -806,12 +823,20 @@
   }
 
   &--one-click {
+    .popup__content {
+      padding-top: 15px;
+    }
+
     .popup__footer {
       @include screen(xl) {
         margin-left: 0;
         margin-right: 0;
         padding-bottom: 0;
       }
+    }
+
+    .popup__contact {
+      margin-top: 15px;
     }
   }
 
@@ -867,6 +892,12 @@
           transition: opacity .3s, transform .3s;
         }
       }
+    }
+  }
+
+  &--cart-add {
+    .popup__content {
+      padding-top: 15px;
     }
   }
 }
