--- a/src/sass/layout/_question.scss
+++ b/src/sass/layout/_question.scss
@@ -27,8 +27,8 @@
   }
 
   p {
-    font: normal 16px/24px Roboto;
-    color: #30373D;
+    font: normal 14px/26px Roboto;
+    color: rgba(48, 55, 61, .9);
 
     @include screen(xl) {
       margin-bottom: 30px;
